--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
                     android:id="@+id/tvYear"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/inter_medium"
+                    android:fontFamily="@font/inter_bold"
                     android:text="(year)"
                     android:textColor="@color/black"
                     android:textSize="20dp"
@@ -29,7 +29,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.020" />
+                    app:layout_constraintVertical_bias="0.030" />
 
                 <TextView
                     android:id="@+id/tvDate"
@@ -43,7 +43,140 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.050" />
+                    app:layout_constraintVertical_bias="0.060" />
+
+
+                <LinearLayout
+                    android:id="@+id/statusBox"
+                    android:layout_width="300dp"
+                    android:layout_height="150dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.149">
+
+                    <LinearLayout
+                        android:id="@+id/statusView"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="25dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                android:fontFamily="@font/inter_bold"
+                                android:text="기초 대사량"
+                                android:textColor="@color/black" />
+
+                            <TextView
+                                android:id="@+id/metabolismKcal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="50dp"
+                                android:fontFamily="@font/inter_bold"
+                                android:text="0 Kcal"
+                                android:textColor="@color/black" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="25dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                android:fontFamily="@font/inter_bold"
+                                android:text="소모 칼로리"
+                                android:textColor="@color/black" />
+
+                            <TextView
+                                android:id="@+id/burnedKcal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="50dp"
+                                android:fontFamily="@font/inter_bold"
+                                android:text="0 Kcal"
+                                android:textColor="@color/black" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="25dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                android:fontFamily="@font/inter_bold"
+                                android:text="섭취 칼로리"
+                                android:textColor="@color/black" />
+
+                            <TextView
+                                android:id="@+id/eatKcal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="50dp"
+                                android:fontFamily="@font/inter_bold"
+                                android:text="0 Kcal"
+                                android:textColor="@color/black" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/totalView"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="예상 감량 몸무게"
+                            android:layout_marginTop="25dp"
+                            android:fontFamily="@font/inter_light"
+                            android:textSize="10dp"
+                            android:layout_gravity="center"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"/>
+
+                        <TextView
+                            android:id="@+id/TodayWeight"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0.0Kg"
+                            android:fontFamily="@font/inter_bold"
+                            android:textSize="24dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_gravity="center"
+                            android:textColor="@color/black"/>
+
+                        <TextView
+                            android:id="@+id/WeightChange"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="( 0.0kg )"
+                            android:fontFamily="@font/inter_medium"
+                            android:textSize="12dp"
+                            android:layout_marginTop="0dp"
+                            android:layout_gravity="center"
+                            android:textColor="@color/black"/>
+                    </LinearLayout>
+                </LinearLayout>
 
 
                 <LinearLayout
@@ -55,10 +188,10 @@
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.486"
+                    app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.272">
+                    app:layout_constraintVertical_bias="0.358">
 
                     <TextView
                         android:id="@+id/todayFood"
@@ -87,29 +220,28 @@
                     android:layout_width="300dp"
                     android:layout_height="150dp"
                     android:layout_marginTop="72dp"
-                    android:layout_marginRight="5dp"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toTopOf="@+id/workoutLinearLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.662">
+                    app:layout_constraintVertical_bias="0.928">
 
                     <TextView
                         android:id="@+id/foodEmptyText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="40dp"
                         android:layout_marginLeft="82dp"
+                        android:layout_marginTop="40dp"
                         android:fontFamily="@font/inter_bold"
                         android:text="등록된 식단이 없습니다"
                         android:textColor="@color/gray" />
 
                     <ScrollView
                         android:id="@+id/scrollView1"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         tools:ignore="SpeakableTextPresentCheck">
 
@@ -122,8 +254,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.094">
-                        </LinearLayout>
+                            app:layout_constraintVertical_bias="0.094"></LinearLayout>
                     </ScrollView>
 
                     <LinearLayout
@@ -162,7 +293,7 @@
                         android:layout_marginBottom="5dp"
                         android:fontFamily="@font/inter_bold"
                         android:text="오늘의 운동"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/addTodayWorkout"
@@ -172,7 +303,7 @@
                         android:layout_marginTop="4dp"
                         android:fontFamily="@font/inter_bold"
                         android:text="+"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/white" />
                 </LinearLayout>
 
                 <LinearLayout
